--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,7 +28,7 @@
                     <!-- add Weibo, Zhihu by Hux, add target = "_blank" to <a> by Hux -->
                     {% if site.data.common.zhihu_username %}
                     <li>
-                        <a target="_blank" href="https://www.zhihu.com/people/sun-dong-zhi/activities">
+                        <a target="_blank" href="https://www.zhihu.com/people/liu-tong-bin-17">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa  fa-stack-1x fa-inverse">知</i>
@@ -38,7 +38,7 @@
                     {% endif %}
                     {% if site.data.common.weibo_username %}
                     <li>
-                        <a target="_blank" href="https://weibo.com/2407846257/profile?rightmod=1&wvr=6&mod=personinfo">
+                        <a target="_blank" href="https://weibo.com/3151133253/profile?topnav=1&wvr=6&is_all=1">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-weibo fa-stack-1x fa-inverse"></i>
@@ -48,7 +48,7 @@
                     {% endif %}
 
 
-                    {% if site.data.common.facebook_username %}
+                    <!-- {% if site.data.common.facebook_username %}
                     <li>
                         <a target="_blank" href="https://www.facebook.com/profile.php?id=100004675021382">
                             <span class="fa-stack fa-lg">
@@ -57,10 +57,10 @@
                             </span>
                         </a>
                     </li>
-                    {% endif %}
+                    {% endif %} -->
                     {% if site.data.common.github_username %}
                     <li>
-                        <a target="_blank" href="https://github.com/{{ site.data.common.github_username }}">
+                        <a target="_blank" href="https://github.com/liutongbin2017">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -74,7 +74,7 @@
                     <iframe
                         style="margin-left: 2px; margin-bottom:-5px;"
                         frameborder="0" scrolling="0" width="91px" height="20px"
-                        src="https://ghbtns.com/github-btn.html?user=IORI20091101&repo=IORI20091101.github.io&type=star&count=true" >
+                        src="https://ghbtns.com/github-btn.html?user=liutongbin2017&repo=react-web&type=star&count=true" >
                     </iframe>
                 </p>
             </div>
