:sparkles: feat(blog): 增加了面试题的一些文章
Signed-off-by: liutongbin <liutongbin@gmail.com>

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,7 @@
     <link href="{{ site.data.common.cdn | append: 'images/desk-icon.png' }}" rel="icon" sizes="192x192" />
     <link href="{{ site.data.common.cdn | append: 'images/desk-icon.png' }}" rel="icon" sizes="128x128" />
 
-    <link rel="shortcut icon" href="{{ site.data.common.cdn | append: 'images/favicon.ico' }}">
+    <link rel="shortcut icon" href="https://i.loli.net/2020/04/03/H3sMaG5EJktCv6o.jpg">
 
     <title>{% if page.title %}{{ page.title }} - {{ site.data.common.SEOTitle }}{% else %}{{ site.data.common.SEOTitle }}{% endif %}</title>
 
