--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -71,14 +71,16 @@
                 </ul>
                 <p class="copyright text-muted">
                     Copyright &copy; {{ site.data.common.title }} {{ site.time | date: '%Y' }} |
-                    <iframe
-                        style="margin-left: 2px; margin-bottom:-5px;"
-                        frameborder="0" scrolling="0" width="91px" height="20px"
-                        src="https://ghbtns.com/github-btn.html?user=liutongbin2017&repo=react-web&type=star&count=true" >
+                    <iframe style="margin-left: 2px; margin-bottom:-5px;" frameborder="0" scrolling="0" width="91px"
+                        height="20px"
+                        src="https://ghbtns.com/github-btn.html?user=liutongbin2017&repo=react-web&type=star&count=true">
                     </iframe>
                 </p>
             </div>
         </div>
+        <iframe src="https://zhanyuzhang.github.io/lovely-cat/cat.html" id="catIframe" frameborder='0'
+            style="position: fixed;top: 50%;right: 16%;"></iframe>
+
     </div>
 </footer>
 
@@ -114,14 +116,14 @@
 
 <!-- async load function -->
 <!--<script>-->
-    <!--function async(u, c) {-->
-      <!--var d = document, t = 'script',-->
-          <!--o = d.createElement(t),-->
-          <!--s = d.getElementsByTagName(t)[0];-->
-      <!--o.src = u;-->
-      <!--if (c) { o.addEventListener('load', function (e) { c(null, e); }, false); }-->
-      <!--s.parentNode.insertBefore(o, s);-->
-    <!--}-->
+<!--function async(u, c) {-->
+<!--var d = document, t = 'script',-->
+<!--o = d.createElement(t),-->
+<!--s = d.getElementsByTagName(t)[0];-->
+<!--o.src = u;-->
+<!--if (c) { o.addEventListener('load', function (e) { c(null, e); }, false); }-->
+<!--s.parentNode.insertBefore(o, s);-->
+<!--}-->
 <!--</script>-->
 
 
@@ -149,7 +151,10 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107257239-1"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments)};
+
+    function gtag() {
+        dataLayer.push(arguments)
+    };
     gtag('js', new Date());
 
     gtag('config', 'UA-107257239-1');
@@ -159,70 +164,81 @@
 
 
 <script>
-        (function(window,document,undefined){
-            var hearts = [];
-            window.requestAnimationFrame = (function(){
-                    return window.requestAnimationFrame ||
-                               window.webkitRequestAnimationFrame ||
-                               window.mozRequestAnimationFrame ||
-                               window.oRequestAnimationFrame ||
-                               window.msRequestAnimationFrame ||
-                               function (callback){
-                                       setTimeout(callback,1000/60);
-                               }
-            })();
-            init();
-            function init(){
-                    css(".heart{width: 10px;height: 10px;position: fixed;background: #f00;transform: rotate(45deg);-webkit-transform: rotate(45deg);-moz-transform: rotate(45deg);}.heart:after,.heart:before{content: '';width: inherit;height: inherit;background: inherit;border-radius: 50%;-webkit-border-radius: 50%;-moz-border-radius: 50%;position: fixed;}.heart:after{top: -5px;}.heart:before{left: -5px;}");
-                    attachEvent();
-                    gameloop();
-            }
-            function gameloop(){
-                    for(var i=0;i<hearts.length;i++){
-                        if(hearts[i].alpha <=0){
-                                document.body.removeChild(hearts[i].el);
-                                hearts.splice(i,1);
-                                continue;
-                        }
-                        hearts[i].y--;
-                        hearts[i].scale += 0.004;
-                        hearts[i].alpha -= 0.013;
-                        hearts[i].el.style.cssText = "left:"+hearts[i].x+"px;top:"+hearts[i].y+"px;opacity:"+hearts[i].alpha+";transform:scale("+hearts[i].scale+","+hearts[i].scale+") rotate(45deg);background:"+hearts[i].color+";z-index:99999";
+    (function (window, document, undefined) {
+        var hearts = [];
+        window.requestAnimationFrame = (function () {
+            return window.requestAnimationFrame ||
+                window.webkitRequestAnimationFrame ||
+                window.mozRequestAnimationFrame ||
+                window.oRequestAnimationFrame ||
+                window.msRequestAnimationFrame ||
+                function (callback) {
+                    setTimeout(callback, 1000 / 60);
                 }
-                requestAnimationFrame(gameloop);
-            }
-            function attachEvent(){
-                    var old = typeof window.onclick==="function" && window.onclick;
-                    window.onclick = function(event){
-                            old && old();
-                            createHeart(event);
-                    }
-            }
-            function createHeart(event){
-                var d = document.createElement("div");
-                d.className = "heart";
-                hearts.push({
-                        el : d,
-                        x : event.clientX - 5,
-                        y : event.clientY - 5,
-                        scale : 1,
-                        alpha : 1,
-                        color : randomColor()
-                });
-                document.body.appendChild(d);
+        })();
+        init();
+
+        function init() {
+            css(
+                ".heart{width: 10px;height: 10px;position: fixed;background: #f00;transform: rotate(45deg);-webkit-transform: rotate(45deg);-moz-transform: rotate(45deg);}.heart:after,.heart:before{content: '';width: inherit;height: inherit;background: inherit;border-radius: 50%;-webkit-border-radius: 50%;-moz-border-radius: 50%;position: fixed;}.heart:after{top: -5px;}.heart:before{left: -5px;}"
+            );
+            attachEvent();
+            gameloop();
         }
-        function css(css){
-                var style = document.createElement("style");
-                    style.type="text/css";
-                    try{
-                        style.appendChild(document.createTextNode(css));
-                    }catch(ex){
-                        style.styleSheet.cssText = css;
-                    }
-                    document.getElementsByTagName('head')[0].appendChild(style);
-        }
-            function randomColor(){
-                    return "rgb("+(~~(Math.random()*255))+","+(~~(Math.random()*255))+","+(~~(Math.random()*255))+")";
+
+        function gameloop() {
+            for (var i = 0; i < hearts.length; i++) {
+                if (hearts[i].alpha <= 0) {
+                    document.body.removeChild(hearts[i].el);
+                    hearts.splice(i, 1);
+                    continue;
+                }
+                hearts[i].y--;
+                hearts[i].scale += 0.004;
+                hearts[i].alpha -= 0.013;
+                hearts[i].el.style.cssText = "left:" + hearts[i].x + "px;top:" + hearts[i].y + "px;opacity:" +
+                    hearts[i].alpha + ";transform:scale(" + hearts[i].scale + "," + hearts[i].scale +
+                    ") rotate(45deg);background:" + hearts[i].color + ";z-index:99999";
             }
-    })(window,document);
+            requestAnimationFrame(gameloop);
+        }
+
+        function attachEvent() {
+            var old = typeof window.onclick === "function" && window.onclick;
+            window.onclick = function (event) {
+                old && old();
+                createHeart(event);
+            }
+        }
+
+        function createHeart(event) {
+            var d = document.createElement("div");
+            d.className = "heart";
+            hearts.push({
+                el: d,
+                x: event.clientX - 5,
+                y: event.clientY - 5,
+                scale: 1,
+                alpha: 1,
+                color: randomColor()
+            });
+            document.body.appendChild(d);
+        }
+
+        function css(css) {
+            var style = document.createElement("style");
+            style.type = "text/css";
+            try {
+                style.appendChild(document.createTextNode(css));
+            } catch (ex) {
+                style.styleSheet.cssText = css;
+            }
+            document.getElementsByTagName('head')[0].appendChild(style);
+        }
+
+        function randomColor() {
+            return "rgb(" + (~~(Math.random() * 255)) + "," + (~~(Math.random() * 255)) + "," + (~~(Math.random() *
+                255)) + ")";
+        }
+    })(window, document);
 </script>
